// gribi_aft.enums is generated by proto_generator as a protobuf
// representation of a YANG schema.
//
// Input schema modules:
//  - github.com/openconfig/gribi/v1/yang/gribi-aft.yang
// Include paths:
//   - github.com/openconfig/gribi/v1/yang/...
//   - github.com/openconfig/gribi/v1/yang/deps/...
syntax = "proto3";

package gribi_aft.enums;

import "github.com/openconfig/ygot/proto/yext/yext.proto";

option go_package = "github.com/openconfig/gribi/v1/proto/gribi_aft/enums";

// OpenconfigAftTypesEncapsulationHeaderType represents an enumerated type generated for the YANG enumerated type encapsulation-header-type.
enum OpenconfigAftTypesEncapsulationHeaderType {
  OPENCONFIGAFTTYPESENCAPSULATIONHEADERTYPE_UNSET = 0;
  OPENCONFIGAFTTYPESENCAPSULATIONHEADERTYPE_GRE = 1 [(yext.yang_name) = "GRE"];
  OPENCONFIGAFTTYPESENCAPSULATIONHEADERTYPE_IPV4 = 2 [(yext.yang_name) = "IPV4"];
  OPENCONFIGAFTTYPESENCAPSULATIONHEADERTYPE_IPV6 = 3 [(yext.yang_name) = "IPV6"];
  OPENCONFIGAFTTYPESENCAPSULATIONHEADERTYPE_MPLS = 4 [(yext.yang_name) = "MPLS"];
  OPENCONFIGAFTTYPESENCAPSULATIONHEADERTYPE_VXLAN = 5 [(yext.yang_name) = "VXLAN"];
}

// OpenconfigMplsTypesMplsLabelEnum represents an enumerated type generated for the YANG enumerated type mpls-label.
enum OpenconfigMplsTypesMplsLabelEnum {
  OPENCONFIGMPLSTYPESMPLSLABELENUM_UNSET = 0;
  OPENCONFIGMPLSTYPESMPLSLABELENUM_IPV4_EXPLICIT_NULL = 1 [(yext.yang_name) = "IPV4_EXPLICIT_NULL"];
  OPENCONFIGMPLSTYPESMPLSLABELENUM_ROUTER_ALERT = 2 [(yext.yang_name) = "ROUTER_ALERT"];
  OPENCONFIGMPLSTYPESMPLSLABELENUM_IPV6_EXPLICIT_NULL = 3 [(yext.yang_name) = "IPV6_EXPLICIT_NULL"];
  OPENCONFIGMPLSTYPESMPLSLABELENUM_IMPLICIT_NULL = 4 [(yext.yang_name) = "IMPLICIT_NULL"];
  OPENCONFIGMPLSTYPESMPLSLABELENUM_ENTROPY_LABEL_INDICATOR = 8 [(yext.yang_name) = "ENTROPY_LABEL_INDICATOR"];
  OPENCONFIGMPLSTYPESMPLSLABELENUM_NO_LABEL = 9 [(yext.yang_name) = "NO_LABEL"];
}

// OpenconfigPacketMatchTypesIPPROTOCOL represents an enumerated type generated for the YANG identity IP_PROTOCOL.
enum OpenconfigPacketMatchTypesIPPROTOCOL {
  OPENCONFIGPACKETMATCHTYPESIPPROTOCOL_UNSET = 0;
  OPENCONFIGPACKETMATCHTYPESIPPROTOCOL_IP_GRE = 24050007 [(yext.yang_name) = "IP_GRE"];
  OPENCONFIGPACKETMATCHTYPESIPPROTOCOL_IP_TCP = 38721802 [(yext.yang_name) = "IP_TCP"];
  OPENCONFIGPACKETMATCHTYPESIPPROTOCOL_IP_L2TP = 81903923 [(yext.yang_name) = "IP_L2TP"];
  OPENCONFIGPACKETMATCHTYPESIPPROTOCOL_IP_AUTH = 203904199 [(yext.yang_name) = "IP_AUTH"];
  OPENCONFIGPACKETMATCHTYPESIPPROTOCOL_IP_PIM = 272904165 [(yext.yang_name) = "IP_PIM"];
  OPENCONFIGPACKETMATCHTYPESIPPROTOCOL_IP_IN_IP = 309674436 [(yext.yang_name) = "IP_IN_IP"];
  OPENCONFIGPACKETMATCHTYPESIPPROTOCOL_IP_IGMP = 512271866 [(yext.yang_name) = "IP_IGMP"];
  OPENCONFIGPACKETMATCHTYPESIPPROTOCOL_IP_ICMP = 512860246 [(yext.yang_name) = "IP_ICMP"];
  OPENCONFIGPACKETMATCHTYPESIPPROTOCOL_IP_UDP = 525100026 [(yext.yang_name) = "IP_UDP"];
  OPENCONFIGPACKETMATCHTYPESIPPROTOCOL_IP_RSVP = 530070378 [(yext.yang_name) = "IP_RSVP"];
}
